...
                android:layout_marginStart="5sp"
                android:text="Name of group:"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic" />

            <EditText
                android:id="@+id/EditText_NameOfGroup"
                android:layout_width="150dp"
                android:layout_height="25sp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line"
                android:cursorVisible="true"
                android:fontFamily="Roboto"
...
                android:layout_marginStart="5sp"
                android:text="Members:"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:id="@+id/TextView_Members"
                android:layout_width="150dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:fontFamily="Roboto"
...
