...
                android:layout_marginStart="5sp"
                android:text="New Password:"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic" />

            <EditText
                android:id="@+id/EditText_NewPasswordProfile"
                android:layout_width="150dp"
                android:layout_height="25sp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line"
                android:cursorVisible="true"
                android:fontFamily="Roboto"
...
                android:layout_marginStart="5sp"
                android:text="Confirm Password:"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic" />

            <EditText
                android:id="@+id/EditText_ConfirmPasswordProfile"
                android:layout_width="150dp"
                android:layout_height="25sp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/line"
                android:cursorVisible="true"
                android:fontFamily="Roboto"
...
