...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textview_add_group_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/ic_add_group" />

            <RelativeLayout
...
                android:layout_marginStart="100sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/ic_add_friend" />
        </LinearLayout>

        <android.support.v7.widget.SearchView
            android:id="@+id/searchview_Message"
            style="@style/SearchViewStyle"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
...
